--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 regex = "1"
 lazy_static = "1.4.0"
+threadpool = "1.8.1"
+num_cpus = "1.13.0"
 
 [[bin]]
 name = "1"
