--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 regex = "1"
 lazy_static = "1.4.0"
+num = "0.1.32"
 
 [[bin]]
 name = "1"
@@ -55,3 +56,7 @@ path = "src/11/main.rs"
 [[bin]]
 name = "12"
 path = "src/12/main.rs"
+
+[[bin]]
+name = "13"
+path = "src/13/main.rs"
