--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 [dependencies]
 regex = "1"
 lazy_static = "1.4.0"
-num = "0.1.32"
 
 [[bin]]
 name = "1"
@@ -60,3 +59,7 @@ path = "src/12/main.rs"
 [[bin]]
 name = "13"
 path = "src/13/main.rs"
+
+[[bin]]
+name = "14"
+path = "src/14/main.rs"
