--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,5 +85,9 @@ name = "18"
 path = "src/18/main.rs"
 
 [[bin]]
+name = "20"
+path = "src/20/main.rs"
+
+[[bin]]
 name = "21"
 path = "src/21/main.rs"
