--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -5,8 +5,12 @@ authors = ["Nick Pearson"]
 edition = "2018"
 
 [dependencies]
+nom = "7"
 
 [[bin]]
 name = "1"
 path = "src/1/main.rs"
 
+[[bin]]
+name = "2"
+path = "src/2/main.rs"
