--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Nick Pearson"]
 edition = "2018"
 
 [dependencies]
+itertools = "0.12.0"
 nom = "7"
 
 [[bin]]
@@ -14,3 +15,7 @@ path = "src/1/main.rs"
 [[bin]]
 name = "2"
 path = "src/2/main.rs"
+
+[[bin]]
+name = "3"
+path = "src/3/main.rs"
