--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -11,3 +11,7 @@ nom = {version = "7", features = ["alloc"] }
 [[bin]]
 name = "1"
 path = "src/1/main.rs"
+
+[[bin]]
+name = "2"
+path = "src/2/main.rs"
