--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 itertools = "0.12.0"
 nom = {version = "7", features = ["alloc"] }
+regex = "1"
 
 [[bin]]
 name = "1"
@@ -15,3 +16,7 @@ path = "src/1/main.rs"
 [[bin]]
 name = "2"
 path = "src/2/main.rs"
+
+[[bin]]
+name = "3"
+path = "src/3/main.rs"
